--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "react-router": "^6.22.0",
     "react-router-dom": "^6.22.0",
     "@syncfusion/ej2-base": "^29.1.36",
     "@syncfusion/ej2-react-buttons": "^29.1.34",
