--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
-    "react-router": "^6.22.0",
-    "react-router-dom": "^6.22.0",
+    "@react-router/node": "^7.5.3",
+    "@react-router/serve": "^7.5.3",
     "@syncfusion/ej2-base": "^29.1.36",
     "@syncfusion/ej2-react-buttons": "^29.1.34",
     "@syncfusion/ej2-react-charts": "^29.1.40",
@@ -24,12 +24,13 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "isbot": "^5.1.27",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-helmet-async": "^1.3.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-router": "^7.5.3",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
+    "@react-router/dev": "^7.5.3",
     "@tailwindcss/vite": "^4.1.4",
     "@types/node": "^20",
     "@types/react": "^19.1.2",
